# -

./: .env_samle  pyproject.toml
certification/: admin.py  forms.py  models.py  urls.py  views.py
certification/migrations/: 0001_initial.py  0002_alter_certification_certificate_and_more.py  0003_alter_certification_technical_devices.py  0004_alter_certification_technical_devices.py  0005_alter_certification_technical_devices.py
certification/templates/certification/: base.html  certification_confirm_delete.html  certification_detail.html  certification_list.html
certification/templates/certification/include/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: command_csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py
users/templates/users/: login.html  password_reset.html  profile.html  users_form.html
