[tool.poetry]
name = "аттестация нк"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dependence.dependencies]
django = "4.2"
pillow = "^11.2.1"
django-rest-framework = "^0.1.0"
black = "^25.1.0"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
djangorestframework-simplejwt = "^5.5.0"
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
